--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="col big">
                 <h2>It doesn't have to be so hard</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi minus consequuntur similique dolore dolor sit sapiente et vero illum, ipsam tenetur voluptatibus voluptas ducimus exercitationem magni molestias quis aut fuga optio sed corrupti dolores laudantium perspiciatis! Numquam corrupti sint accusantium modi est, fugit quo quisquam esse, error repellendus dolorum iure!</p>
-                <img src="images/image.jpg" alt="statistics">
+                <img src="https://ibb.co/VSy3JPj" alt="statistics">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure ducimus obcaecati repellendus quae neque similique corporis dignissimos assumenda ab expedita ipsam dolorum doloribus nemo porro, laudantium consectetur tenetur. Dolorem vero id explicabo, sint ratione odit, ea incidunt odio cumque magnam ducimus at mollitia molestiae qui voluptatem necessitatibus labore obcaecati. Quaerat.</p>
                 </div>
             <div class="col sidebar">
